--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ clap = { version = "4.5.50", features = ["derive"] }
 indexmap = "2.12.1"
 linkme = "0.3.35"
 ureq = "3.1.4"
+winnow = "0.7.14"
 
 [dev-dependencies]
 
