--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ doctest = false
 clap = { version = "4.5.50", features = ["derive"] }
 indexmap = "2.12.1"
 linkme = "0.3.35"
+num = "0.4.3"
 ureq = "3.1.4"
 winnow = "0.7.14"
 
