--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2024"
 doctest = false
 
 [dependencies]
+atoi_simd = "0.17.0"
 clap = { version = "4.5.50", features = ["derive"] }
 indexmap = "2.12.1"
 linkme = "0.3.35"
