--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ clap = { version = "4.5.50", features = ["derive"] }
 indexmap = "2.12.1"
 linkme = "0.3.35"
 num = "0.4.3"
+rustc-hash = "2.1.1"
 ureq = "3.1.4"
 winnow = "0.7.14"
 
